--- a/filter.css
+++ b/filter.css
@@ -50,6 +50,7 @@ color: #f2f2f2;
   left:10px;
   line-height: 1.5em;
   width: 8vw;
+  min-width: max-content;
   background-color: #181c1f;
   padding: 10px;
   cursor: pointer;
